// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders an artwork caption properly 1`] = `
<div
  className="file__CaptionContainer-s1paa85-2 iVGOob"
>
  <div
    className="file__CaptionTextContainer-s1paa85-3 bXpGAe"
  >
    <div
      className="fullscreen-viewer__caption-toggle file__StyledCaptionToggle-s1paa85-0 hcjdTk"
      onClick={undefined}
    >
      <span>
        Hide
      </span>
    </div>
    <div
      className="sc-bxivhb gsbYNP"
      open={true}
    >
      <div
        className="sc-htpNat dqiQen"
      >
        <div
          className="artist-name file__Line-s7zcrfi-1 jFJBbs"
        >
          <span
            className="name"
          >
            <a
              className="file__StyledTextLink-s18afosz-0 hOUyga"
              href="/artist/fernando-botero"
            >
              Fernando Botero
            </a>
          </span>
        </div>
        <div
          className="file__Line-s7zcrfi-1 jFJBbs"
        >
          <span
            className="title"
          >
            <a
              className="file__StyledTextLink-s18afosz-0 hOUyga"
              href="/artwork/fernando-botero-nude-on-the-beach"
            >
              Nude on the Beach
            </a>
          </span>
          <span
            className="comma"
          >
            , 
          </span>
          <span
            className="date"
          >
            2000
          </span>
          <span
            className="comma"
          >
            , 
          </span>
          <a
            className="file__StyledTextLink-s18afosz-0 hOUyga"
            href="/partner/gary-nader"
          >
            Gary Nader
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    className="file__Index-s1paa85-1 jWanmW"
  >
    2 of 10
  </div>
</div>
`;

exports[`renders an image caption properly 1`] = `
<div
  className="file__CaptionContainer-s1paa85-2 iVGOob"
>
  <div
    className="file__CaptionTextContainer-s1paa85-3 bXpGAe"
  >
    <div
      className="fullscreen-viewer__caption-toggle file__StyledCaptionToggle-s1paa85-0 hcjdTk"
      onClick={undefined}
    >
      <span>
        Hide
      </span>
    </div>
    <div
      className="sc-bxivhb gsbYNP"
      open={true}
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "<p>Photo by Adam Kuehl for Artsy.</p>",
          }
        }
      />
    </div>
  </div>
  <div
    className="file__Index-s1paa85-1 jWanmW"
  >
    3 of 10
  </div>
</div>
`;
